# svo_renderer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
data/: config.json  database.db  inukshuk.octree  menger_sponge256_1.octree  rendering_system_metrics.json
data/scenes/: default.json
data/shaders/: boundingbox.frag  boundingbox.vert  boundingsphere.frag  boundingsphere.vert  circle_splat.frag  circle_splat.geom  circle_splat.vert  gaussian_splat.frag  gaussian_splat.geom  main.frag  main.geom  main.vert  square_splat.frag  square_splat.geom  test_gauss_splat.frag  text.frag  text.vert  validate.bat
data/svo/menger_sponge/: menger_sponge_128.octree  menger_sponge_128.octreedata  menger_sponge_128.octreenodes  menger_sponge_16.octree  menger_sponge_16.octreedata  menger_sponge_16.octreenodes  menger_sponge_2.octreedata  menger_sponge_2.octreenodes  menger_sponge_256.octree  menger_sponge_256.octreedata  menger_sponge_256.octreenodes  menger_sponge_32.octree  menger_sponge_32.octreedata  menger_sponge_32.octreenodes  menger_sponge_4.octree  menger_sponge_4.octreedata  menger_sponge_4.octreenodes  menger_sponge_512.octree  menger_sponge_512.octreedata  menger_sponge_512.octreenodes  menger_sponge_64.octree  menger_sponge_64.octreedata  menger_sponge_64.octreenodes  menger_sponge_8.octree  menger_sponge_8.octreedata  menger_sponge_8.octreenodes
data/svo/oreithra/: oreithra_128.octree  oreithra_128.octreedata  oreithra_128.octreenodes  oreithra_16.octree  oreithra_16.octreedata  oreithra_16.octreenodes  oreithra_2.octree  oreithra_2.octreedata  oreithra_256.octree  oreithra_256.octreedata  oreithra_256.octreenodes  oreithra_32.octree  oreithra_32.octreedata  oreithra_32.octreenodes  oreithra_4.octree  oreithra_4.octreedata  oreithra_4.octreenodes  oreithra_512.octree  oreithra_512.octreedata  oreithra_512.octreenodes  oreithra_64.octree  oreithra_64.octreedata  oreithra_64.octreenodes  oreithra_8.octree  oreithra_8.octreedata  oreithra_8.octreenodes
data/textures/: alphabetTexture.tga
lib/glew-2.0.0/linux64/: libGLEW.so.2.0.0
lib/glew-2.0.0/win32/: glew32.lib
lib/glew-2.0.0/win64/: glew32.lib
lib/glfw-3.2.1/linux64/: libglfw.so.3.2
lib/glfw-3.2.1/win32/: glfw3.lib
lib/glfw-3.2.1/win64/: glfw3.lib
lib/spdlog-0.13.0/spdlog/: tweakme.h
lib/sqlite/win32/: sqlite3.lib
lib/sqlite/win64/: sqlite3.lib
res/: bunny.octree  database.db  inukshuk.octree
res/shaders/: main.frag  main.geom  main.vert
scripts/: prep_octree_file.py  prep_scene.py
src/: DefaultWorld.h  ProgramContext.cpp  ProgramContext.h  World.h  main.cpp
src/components/: CameraComponent.cpp  CameraComponent.h  ControllerComponent.h  GraphicsComponent.cpp  GraphicsComponent.h  MeshComponent.cpp  MeshComponent.h  SVOComponent.cpp  SVOComponent.h  TransformComponent.cpp  TransformComponent.h
src/context/: ProgramContext.cpp  ProgramContext.h  ProgramVariables.cpp  ProgramVariables.h
src/core/: ComponentArray.h  ComponentArray.hpp  ComponentManager.h  ComponentManager.hpp  EntityManager.cpp  EntityManager.h  EntityManager.hpp  ProgramContext.cpp  ProgramContext.h  ProgramVariables.cpp  ProgramVariables.h  SceneManager.cpp  SceneManager.h  SystemManager.cpp  SystemManager.h  Types.h  Types.hpp
src/entities/: Entity.cpp  Entity.h
src/gui/: imgui.h  imgui_draw.cpp
src/scenes/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/systems/: GuiRenderingSystem.cpp  GuiRenderingSystem.h  GuiSystem.cpp  GuiSystem.h  InputSystem.cpp  InputSystem.h  RenderingSystem.cpp  RenderingSystem.h  System.cpp  System.h  WorldRenderingSystem.cpp  WorldRenderingSystem.h
src/systems/rendering/: CircleSplatRenderer.cpp  CircleSplatRenderer.h  GaussianSplatRenderer.cpp  GaussianSplatRenderer.h  SplatRenderer.cpp  SplatRenderer.h  SquareSplatRenderer.cpp  SquareSplatRenderer.h
src/utility/: Camera.cpp  Camera.h  Cone.cpp  Cone.h  Frustum.cpp  Frustum.h  Octree.cpp  Octree.h  OctreeFile.cpp  OctreeFile.h  Plane.cpp  Plane.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  Text.cpp  Text.h  Texture.cpp  Texture.h
src/world/: World.cpp  World.h
test/: MemoryLeakTest.h  main.cpp
